--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <h2>Resume</h2>
 
       </div>
-      <embed src="./asimYaramisResume.pdf" type="application/pdf" frameBorder="0" scrolling="auto" height="1024px"
+      <embed src="./asimYaramis.Resume.pdf" type="application/pdf" frameBorder="0" scrolling="auto" height="1024px"
         width="100%"></embed>
 
     </div>
